@@ -1,16 +1,7 @@
-AUX dhcpcd.initd 319 RMD160 c675c053442e2088e5ddd2ad9c528614aec088fe SHA1 33fd906730b0c2f2abc72335dd0133a17e27b72a SHA256 eb50356068ce6ffc664104e9a7eb6169e041e1e6d434f6247b3161ea45156c6a
-AUX dhcpcd.initd-nonet 334 RMD160 815d6e4d1886e6dd95c74a175af45bf5cc8f86d0 SHA1 98f61ed93015194871ae48635fb8f4441f05403b SHA256 6863eda7eefb7ac110254a785981dd3d813a5880a46d4a42864f53880ab5dd80
 AUX dhcpcd.initd-nonet-5.1.2-r1 303 RMD160 405ad4b2f2138dda8da3cf84285ed7c9582d3ec5 SHA1 5666b32e0c5eefc7eb65b7e507527dd6c5bc61bb SHA256 2886cb1508ec4caef6dc3a8737d0c5908f998d8698265505296ecd73a2b4096a
-DIST dhcpcd-4.0.15.tar.bz2 52767 RMD160 a6b00ed30ce850cbe58c4aed1937f4bb8dcfd043 SHA1 bb1bbbe5b97bc8fd1fc1d4bea7067fe76f59182d SHA256 8ad7619eea8414851225b2ad2e204678911aca22791941f4caa49db435b2bca0
-DIST dhcpcd-5.0.4.tar.bz2 62058 RMD160 fca6257b30c4c12811ca204bf9e7fe186335928b SHA1 ce958f071b5a2267149e56882a984fb1d2810803 SHA256 af75575f2369ee0c95ae2bbd9711682a37cd57fc85dadaafee1f8092159a3473
-DIST dhcpcd-5.0.6.tar.bz2 62535 RMD160 75ab9fb07ad09bb10f14ef5218da3ea95cceed4a SHA1 2539dfc157f3c897959ca16a4a9eabdfa4599657 SHA256 051c905aa6036e15432fa790b17b411f3cae380840f3ad2d0d03f4f466f81e61
-DIST dhcpcd-5.1.1.tar.bz2 63701 RMD160 ff5d199d642bc309614e305b93c4396768a63f55 SHA1 4ffb9ce39620809f31f894eff4ce3c78f5ecf75e SHA256 93b926d48b8eb1cd0588a06e1dd71432264f06583406d8c355b5152b30d7f9a6
 DIST dhcpcd-5.1.2.tar.bz2 64570 RMD160 d6eb56c1164526cf987be8ea6d8705286be09585 SHA1 a68915e7033e3b196d28f97e70aadc0469a20031 SHA256 0ea254c78cebeed2d322543206a17b93a594bb59782c6d14723e135e8de6766a
-EBUILD dhcpcd-4.0.15.ebuild 2811 RMD160 c93669f196ea654dcb6d95b9a1a5e379883a7e74 SHA1 a4ebc60e7aded946a95372b8df2764c895ab53ef SHA256 d30e27afd3dd74d789272d957cc8b9fc0ab0f067c42c7c80b18b0d7f39272078
-EBUILD dhcpcd-5.0.4.ebuild 2770 RMD160 9e0e09c86dc6d3ab4ff1f1504e8f71c7dd1b6bd4 SHA1 fdf2b8075930d969054aead9418d005982f6df5e SHA256 e66e05f91342ff1bab9ecccb2657fe8e87760806c8bfb94d1e2449356ba57814
-EBUILD dhcpcd-5.0.6.ebuild 2770 RMD160 5f5e06305ddff40413311ac041e2fd7b7ffdd4a5 SHA1 faacb61e8f93c141d29b83901ee2b584d3f9f020 SHA256 a168ca3b2180f3a3501a9f3e315a3449992160a2a547fb3d179275b985369003
-EBUILD dhcpcd-5.1.1-r1.ebuild 2385 RMD160 2d27f985a5b784ca43592d5a889a13af5566ea74 SHA1 e576efbcab562449d8d4981c5ff8e9c1cf78e341 SHA256 65acfb85c68990ca1bb0f7344623dc609ed42939c762ce4831bea21dc9424d28
+DIST dhcpcd-5.2.5.tar.bz2 68408 RMD160 40e026159f8d3525ca25b6f607f9634b077ebd27 SHA1 f428a796d5c8c2eaf46b33e2f9d88e04027349f0 SHA256 e22d13494907973891bd158cfcfd764f49e6013735e220c040e58f7d4e850337
 EBUILD dhcpcd-5.1.2-r1.ebuild 2315 RMD160 462fa8bebcb60507ccdac633e9545e88947e88c2 SHA1 b2fc98d82f9fc8df477fa457f7933e94c62d3e9f SHA256 24ac60eb8075442660ab70390d58a32d96988474bf5820dcfcb3c703cf6502d8
-EBUILD dhcpcd-5.1.2.ebuild 2282 RMD160 49e10f754e43edbaa0f3f9165d5619e80a1bb87a SHA1 6abba4be858d56d3b377fc921e3fe78318b9d931 SHA256 fe8178e2f66f978c70c7f92337d7694941dbbaaaeaa43f5a57e632e237666537
-MISC ChangeLog 37747 RMD160 c3144e62575fc9263a2c06edee882b468590ca76 SHA1 2fd4304848517eb391fe1eb3fdaf2f88ba16993f SHA256 c855ab6118aad5924a24f1af2d40c7cb6fc67fd84cf5cd4352f7471800d2110f
+EBUILD dhcpcd-5.2.5.ebuild 2364 RMD160 91f3fa6fc32723d1ec4de928e5c99d6214167ee2 SHA1 9c9a7317078b857913d8832d90014e0c1c18cfa7 SHA256 78e183d46cdb5b9b3815ae787f912e830b06173ec6399d963f8f40452cf6d17a
+MISC ChangeLog 37917 RMD160 bf4094e641becb66717ff48e64cf3591d2da5875 SHA1 4bf8356ab37c14db9308754bce786ffc9c7be792 SHA256 884f5bd64a372ffb387739040fbb2bed8e134bef0fa8a504960b1913a8d527a6
 MISC metadata.xml 352 RMD160 28081c66d87367e04ffcb2899dd0c58dc9201d16 SHA1 e178173ac418b4189a56df98fee2911540a19f86 SHA256 22a4bf8bcaff216e4cf884e51cefa3dfa7645416d9107568ed57682409c80634
