@@ -1,17 +1,0 @@
-#!/sbin/runscript
-# Copyright 2007-2008 Roy Marples <roy@marples.name>
-# All rights reserved. Released under the 2-clause BSD license.
-
-command=/sbin/dhcpcd
-pidfile=/var/run/dhcpcd.pid
-command_args=-q
-name="DHCP Client Daemon"
-
-depend()
-{
-	provide dhcp-client
-	need localmount
-	use logger
-	after bootmisc modules net.lo
-	before dns
-}
